--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -4,8 +4,8 @@
     path: "{{ item }}"
     state: directory
     mode: 0755
-    owner: root
-    group: root
+    owner: "{{ supervisor_user }}"
+    group: "{{ supervisor_user }}"
   with_items:
     - "{{ supervisor_config_path }}"
     - "{{ supervisor_config_path }}/conf.d"
@@ -22,8 +22,8 @@
     src: program.conf.j2
     dest: "{{ supervisor_config_path }}/conf.d/{{ item.name }}.conf"
     force: true
-    owner: root
-    group: root
+    owner: "{{ supervisor_user }}"
+    group: "{{ supervisor_user }}"
     mode: 0644
   when: item.state|default('present') != 'absent'
   with_items: "{{ supervisor_programs }}"
